<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.1</version>
		<relativePath/>
	</parent>

	<artifactId>event-api</artifactId>
	<version>1.19.6</version>

	<name>event-api</name>
	<description>Kontur Event API</description>

	<properties>
		<java.version>16</java.version>
		<project.resource.directory>src/main/resources</project.resource.directory>
		<spring-cloud.version>2021.0.0</spring-cloud.version>
		<spring-cloud-aws-messaging.version>2.2.6.RELEASE</spring-cloud-aws-messaging.version>
		<springdoc-openapi-ui.version>1.5.13</springdoc-openapi-ui.version>
		<feign-micrometer.version>11.7</feign-micrometer.version>
		<mybatis-spring-boot-starter.version>2.2.0</mybatis-spring-boot-starter.version>
		<liquibase-core.version>4.6.1</liquibase-core.version>
		<jts2geojson.version>0.16.0</jts2geojson.version>
		<geographiclib-java.version>1.51</geographiclib-java.version>
		<gt-geojson.version>26-SNAPSHOT</gt-geojson.version>
		<spatial4j.version>0.8</spatial4j.version>
		<jts-core.version>1.18.1</jts-core.version>
		<jib.source.image>openjdk:16-alpine</jib.source.image>
		<image.tag>${IMAGE_TAG}</image.tag>
	</properties>

	<dependencies>
		<!-- Web -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-tomcat</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jetty</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-aws-messaging</artifactId>
			<version>${spring-cloud-aws-messaging.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-openfeign</artifactId>
		</dependency>
		<dependency>
			<groupId>io.github.openfeign</groupId>
			<artifactId>feign-okhttp</artifactId>
		</dependency>

		<!-- Swagger UI -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>${springdoc-openapi-ui.version}</version>
		</dependency>

		<!-- Authorization -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>

		<!-- Monitoring and Logging -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
		</dependency>
		<dependency>
			<groupId>io.github.openfeign</groupId>
			<artifactId>feign-micrometer</artifactId>
			<version>${feign-micrometer.version}</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback.contrib</groupId>
			<artifactId>logback-jackson</artifactId>
			<version>0.1.5</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback.contrib</groupId>
			<artifactId>logback-json-classic</artifactId>
			<version>0.1.5</version>
		</dependency>

		<!-- Database -->
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter</artifactId>
			<version>${mybatis-spring-boot-starter.version}</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
			<version>${liquibase-core.version}</version>
		</dependency>

		<!-- GIS -->
		<dependency>
			<groupId>org.wololo</groupId>
			<artifactId>jts2geojson</artifactId>
			<version>${jts2geojson.version}</version>
		</dependency>
		<dependency>
			<groupId>net.sf.geographiclib</groupId>
			<artifactId>GeographicLib-Java</artifactId>
			<version>${geographiclib-java.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-geojson</artifactId>
			<version>${gt-geojson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.locationtech.spatial4j</groupId>
			<artifactId>spatial4j</artifactId>
			<version>${spatial4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.locationtech.jts</groupId>
			<artifactId>jts-core</artifactId>
			<version>${jts-core.version}</version>
		</dependency>

		<!-- Parsing -->
		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-modules-java8</artifactId>
			<version>2.13.0</version>
			<type>pom</type>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-csv</artifactId>
			<version>2.11.1</version>
		</dependency>
		<dependency>
			<groupId>org.dhatim</groupId>
			<artifactId>fastexcel-reader</artifactId>
			<version>0.12.12</version>
		</dependency>
		<dependency>
			<groupId>net.minidev</groupId>
			<artifactId>json-smart</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.14.3</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>jakarta.activation</groupId>
			<artifactId>jakarta.activation-api</artifactId>
			<version>2.0.1</version>
		</dependency>

		<!-- Tools -->
		<dependency>
			<groupId>com.github.vladimir-bukhtoyarov</groupId>
			<artifactId>bucket4j-core</artifactId>
			<version>6.4.1</version>
		</dependency>
		<dependency>
			<groupId>com.uber</groupId>
			<artifactId>h3</artifactId>
			<version>3.6.4</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>30.0-jre</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jpmml</groupId>
			<artifactId>pmml-evaluator</artifactId>
			<version>1.6.3</version>
		</dependency>
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-core</artifactId>
			<version>3.3.9.RELEASE</version>
		</dependency>

		<!--Cache-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>

		<!--Test dependencies-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<version>1.16.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M4</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<classesDirectory>${project.build.outputDirectory}</classesDirectory>
					<runOrder>alphabetical</runOrder>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Implementation-Build-Time>${maven.build.timestamp}</Implementation-Build-Time>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<!-- Copy dependencies for runnable app archive packaging -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<phase>post-integration-test</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
					<execution>
						<id>unpack</id>
						<phase>package</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>io.kontur.common</groupId>
									<artifactId>systemd-service-wrapper</artifactId>
									<version>1.0.8</version>
									<type>jar</type>
									<overWrite>false</overWrite>
									<outputDirectory>${project.build.directory}/unpacked</outputDirectory>
									<includes>**/*.sh</includes>
									<excludes>**/*.xml</excludes>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Config assembly for runnable app archive packaging -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptors>
						<descriptor>assembly.xml</descriptor>
					</descriptors>
					<tarLongFileMode>posix</tarLongFileMode>
				</configuration>
			</plugin>
			<!-- Gitlab CI -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.googlecode.maven-download-plugin</groupId>
				<artifactId>download-maven-plugin</artifactId>
				<version>1.6.8</version>
				<executions>
					<execution>
						<id>download-opentelemetry-agent</id>
						<phase>process-resources</phase>
						<goals>
							<goal>wget</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<url>https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.16.0/opentelemetry-javaagent.jar</url>
					<unpack>false</unpack>
					<outputDirectory>${project.build.sourceDirectory}/../jib/opentelemetry/</outputDirectory>
					<md5>4f97ebd74d075e60c76ecdf47b61006a</md5>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<container>
						<mainClass>io.kontur.eventapi.EventapiApplication</mainClass>
						<jvmFlags>
							<jvmFlag>-javaagent:/opentelemetry/opentelemetry-javaagent.jar</jvmFlag>
							<jvmFlag>-Dlogging.config=classpath:logback-stdout-json.xml</jvmFlag>
							<jvmFlag>-server</jvmFlag>
							<jvmFlag>-XX:MaxRAMPercentage=65</jvmFlag>
							<jvmFlag>-XX:InitialRAMPercentage=20</jvmFlag>
							<jvmFlag>-XX:+HeapDumpOnOutOfMemoryError</jvmFlag>
							<jvmFlag>-XX:HeapDumpPath=/tmp/eventapi_oom.hprof</jvmFlag>
							<jvmFlag>-XX:+UseZGC</jvmFlag>
							<jvmFlag>-XX:SoftMaxHeapSize=34359738368</jvmFlag>
							<!--<jvmFlag>-XX:+UseG1GC</jvmFlag>-->
							<!--<jvmFlag>-Xlog:gc*:file=%h/log/event-api.GC.log</jvmFlag>-->
						</jvmFlags>
					</container>
					<from>
						<image>nexus.kontur.io:8084/library/${jib.source.image}</image>
					</from>
					<to>
						<image>nexus.kontur.io:8085/konturdev/${project.name}:${image.tag}</image>
					</to>
<!--
					<dockerClient>
						<environment>
							<DOCKER_TLS_VERIFY>${env.DOCKER_TLS_VERIFY}</DOCKER_TLS_VERIFY>
							<DOCKER_HOST>${env.DOCKER_HOST}</DOCKER_HOST>
							<DOCKER_CERT_PATH>${env.DOCKER_CERT_PATH}</DOCKER_CERT_PATH>
							<MINIKUBE_ACTIVE_DOCKERD>${env.MINIKUBE_ACTIVE_DOCKERD}</MINIKUBE_ACTIVE_DOCKERD>
						</environment>
					</dockerClient>
-->
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.sentry</groupId>
				<artifactId>sentry-maven-plugin</artifactId>
				<version>0.0.6</version>
				<!-- Required to allow auto-install of Sentry SDK and Integrations -->
				<extensions>true</extensions>
				<configuration>
					<!-- for showing output of sentry-cli -->
					<debugSentryCli>true</debugSentryCli>
					<!--  Disable the plugin -->
					<skip>false</skip>
					<!--  Disable source-context -->
					<skipSourceBundle>true</skipSourceBundle>
					<!--  Disable auto-install of SDK and Integrations -->
					<skipAutoInstall>false</skipAutoInstall>
					<org>${env.SENTRY_ORG}</org>
					<project>event-api</project>
					<!-- provide your auth token via SENTRY_AUTH_TOKEN environment variable -->
					<authToken>${env.SENTRY_AUTH_TOKEN}</authToken>
				</configuration>
				<executions>
					<execution>
						<goals>
							<!--  Generates a source bundle and uploads it to Sentry. -->
							<!--  This enables source context, allowing you to see your source -->
							<!--  code as part of your stack traces in Sentry. -->
							<goal>uploadSourceBundle</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<executions>
							<execution>
								<id>assembly</id>
								<phase>install</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>kontur</id>
			<url>https://nexus.kontur.io/repository/common/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<repository>
			<id>osgeo</id>
			<name>OSGeo Release Repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
			<snapshots><enabled>false</enabled></snapshots>
			<releases><enabled>true</enabled></releases>
		</repository>
		<repository>
			<id>osgeo-snapshot</id>
			<name>OSGeo Snapshot Repository</name>
			<url>https://repo.osgeo.org/repository/snapshot/</url>
			<snapshots><enabled>true</enabled></snapshots>
			<releases><enabled>false</enabled></releases>
		</repository>
	</repositories>
	
	<pluginRepositories>
		<pluginRepository>
			<id>kontur</id>
			<url>https://nexus.kontur.io/repository/common/</url>
		</pluginRepository>
	</pluginRepositories>
</project>
